
	Added Ctrl-X / (slash) key to command-line mode that inserts last search
	pattern into current cursor position.  Thanks to filterfalse.

	Added custom views, which contrary to regular views can contain files that
	do not belong to the same directory.

	Added b key to menu mode that creates custom view filled with menu items
	filtering out those that are not paths.

	Allowed having multiple file viewers with same rules for choosing them at
	run-time as for file associations.  Thanks to filterfalse.

	Added --delimiter command-line option.  Configures delimiter string on
	writing out list of paths (like on `-f` switch).  Thanks to Jeet
	Sukumaran (a.k.a. jeetsukumaran).

	Added --choose-files and --choose-dir command-line switches to specify
	output location for names of selected files or last visited directory
	respectively.  Thanks to Jeet Sukumaran (a.k.a. jeetsukumaran).

	Added :cq[uit] command to exit with non-zero exit code and also abort
	directory choosing.  Thanks to Jeet Sukumaran (a.k.a. jeetsukumaran).

	Added --on-choose command-line switch to execute a command on selection
	rather than opening it.  Thanks to Ross Hadden (a.k.a. rosshadden).

	Added system() builtin function that executes command via shell and returns
	its output.

	Added Ctrl-] command-line key to trigger abbreviation expansion.

	Added 'wordchars' option to specify which characters in command-line mode
	should be considered as part of a word.  Thanks to filterfalse.

	Added command-line mode abbreviations and :cabbrev, :cnoreabbrev and
	:cunabbrev commands to manage them.  Thanks to filterfalse.

	Added per-file overwrite confirmation on directory merging.  Thanks to
	willemw12.

	Added per-file progress and changed progress to appear in a dialog rather
	than statusbar.

	Added OS X version of sample vifmrc file.  Now this one will be used on
	first run on OS X.  Thanks to Larry Hynes (a.k.a larryhynes).

	Added --enable-coverage option to configure script.
